Fixed night mode, night mode on mobile view, adjusted navbar, signup page

--- a/src/pages/Discussion/Discussion.css
+++ b/src/pages/Discussion/Discussion.css
@@ -68,9 +68,15 @@
   margin-top: 4px;
 }
 
+.night-mode-text {
+  color: white; /* Set text color to white in night mode */
+}
+
+
 /* Media Queries */
 
 @media only screen and (max-width: 768px) {
+  
   .post-profile-picture {
     width: 30px; /* Reduce profile picture size */
     height: 30px;
