--- a/src/pages/VideoResume/Steps.css
+++ b/src/pages/VideoResume/Steps.css
@@ -102,6 +102,11 @@
 .backButtonStyle:hover {
   background-color: #0d8bf0;
 }
+.night-mode {
+  background-color: #333; /* Dark background color for night mode */
+  color: white; /* Text color for night mode */
+}
+
 
 /* Media Query for smaller screens */
 @media (max-width: 768px) {
